Added nearly working solution.